add QuestionBox and AnswerBox components; add styling;

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,7 @@
   --secondary-main: rgb(27, 117, 208);
   --dark-green: rgb(24, 134, 75);
   --dark-gray: rgb(99, 107, 116);
+  --dark-red: rgb(227, 0, 0);
 }
 
 *,
