--- a/frontend/src/components/question-adding-page/NewQuestionForm/NewQuestionForm.styles.css
+++ b/frontend/src/components/question-adding-page/NewQuestionForm/NewQuestionForm.styles.css
@@ -1,6 +1,6 @@
 .new-question-form {
     padding: 2rem;
-    border: 1px solid #ccc;
+    border: 1px solid #0D0D0D;
     border-radius: 1.5rem;
     margin: auto;
     width: 50%;
@@ -19,7 +19,7 @@
         display: inline-block;
         padding: 1rem;
         width: 100%;
-        border: 1px solid #ccc;
+        border: 1px solid black;
         border-radius: 4px;
         box-sizing: border-box;
         margin-bottom: 2rem;
@@ -30,7 +30,7 @@
         height: 1px;
         margin: auto auto 2rem auto;
         background-color: #ccc;
-        width: 80% !important;
+        width: 80%;
     }
 
     & button {
