--- a/frontend/src/components/individual-question-page/AnswerBox/AnswerBox.styles.css
+++ b/frontend/src/components/individual-question-page/AnswerBox/AnswerBox.styles.css
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 2.5rem 0 0;
+    margin: 0 1rem 0 1rem;
     font-size: 1.6rem;
     font-weight: 800;
 
@@ -27,6 +27,7 @@
   }
 
   & .text-body {
+    margin: 0 0 0 5rem;
     font-size: 2rem;
   }
 
@@ -40,6 +41,17 @@
       padding: 1rem 1rem 1rem 1rem;
       border-radius: 0.5rem;
       cursor: pointer;
+      font-weight: 800;
+
+      &:first-of-type {
+        color: var(--dark-green);
+        border: 0.1rem solid var(--dark-green);
+      }
+
+      &:last-of-type {
+        color: var(--dark-red);
+        border: 0.1rem solid var(--dark-red);
+      }
     }
 
     & .signature {
