--- a/frontend/src/components/questions-page/Question/Question.styles.css
+++ b/frontend/src/components/questions-page/Question/Question.styles.css
@@ -2,10 +2,11 @@
   display: flex;
   flex-direction: row;
   column-gap: 2rem;
+  align-items: center;
   padding: 2.5rem 0 2.5rem 0;
   border-top: 0.1rem solid var(--dark-gray);
 
-  & h2 {
+  & .title {
     font-size: 2.4rem;
     color: var(--secondary-main);
     font-weight: normal;
@@ -40,6 +41,7 @@
       padding: 0 2rem 0 0;
       color: var(--secondary-main);
       font-size: 1.4rem;
+      font-weight: 500;
 
       & span {
         color: var(--primary-main);
